--- a/templates/main.html
+++ b/templates/main.html
@@ -21,9 +21,12 @@
         //tracks textbox usage, called every time text box changes
 		function getString(str) {
             prof = str; //for global storage of the user's input
-            inputResponse = getResponse(prof); //send user input as request to get contents back
-            var w = window.open("", "MsgWindow", "width=500,height=500"); //open a window...
-            w.document.write(inputResponse); //write the UVA People search contents to a window (temporary)
+            //search is pointless if the string's less than three characters...
+            if(prof.length >= 3) {
+                var inputResponse = getResponse(prof); //send user input as request to get contents back
+                var w = window.open("", "MsgWindow", "width=500,height=500"); //open a window...
+                w.document.write(inputResponse); //write the UVA People search contents to a window (temporary)
+            }
 		}
 
 	</script>
