--- a/templates/main.html
+++ b/templates/main.html
@@ -7,6 +7,8 @@
 
         var prof; //stores the user's search term
         var json; //stores the json data from user's request
+        var addr_dict = new Object(); //stores mapping of professor-->address
+        var coord_dict = new Object(); //stores mapping of professor-->{x: lat, y: lon}
 
         //makes a local request to /search/?term=query and returns the response contents
         function getResponse(query) {
@@ -20,32 +22,36 @@
         }
 
         //tracks textbox usage, called every time text box changes
+        //fills up professor-->address dictionary (addr_dict)
 		function getString(str) {
             prof = str; //for global storage of the user's input
-            //search is pointless if the string's less than three characters...
             if(prof.length >= 5) {
-                var inputResponse = getResponse(prof); //send user input as request to get contents back
-                var w = window.open("", "MsgWindow", "width=500,height=500"); //open a window...
-                w.document.write(inputResponse); //write the UVA People search contents to a window (temporary)
+                $.getJSON("http://localhost:8000/search/?term=" + prof, function(data) {
+                    console.log(data); // use data as a generic object
+                    for(var key in data) {
+                        console.log(key); //grab all of the names
+                        console.log(data[key]["address"]);
+                        addr_dict[key] = data[key]["address"];
+                    }
+                });
+                
             }
 		}
 
-        $.getJSON("http://localhost:8000/search/?term=ishan", function(data) {
+        //json --> dictionary
+        /*$.getJSON("http://localhost:8000/search/?term=ishan", function(data) {
             console.log(data); // use data as a generic object
-            arr = jQuery.parseJSON(JSON.stringify(data)); //parse the JSON into an array
-            console.log(arr["Ishan C. Williams"]);
-            for(var i=0;i<arr.length;i++){
-                var obj = arr[i];
-                for(var key in obj) {
-                    var attrName = key;
-                    console.log(attrName);
-                    var attrValue = obj[key];
-                    console.log(attrValue);
-                }
-    }
+            console.log(data["Ishan C. Williams"]["address"]);
+            for(var key in data) {
+
+                console.log(key); //grab all of the names
+                console.log(data[key]["address"]);
+                dict[key] = data[key]["address"];
 
 
-        });
+            }
+
+        });*/
 
 	</script>
 </head>
