Fixed double request bug.

--- a/templates/main.html
+++ b/templates/main.html
@@ -34,7 +34,7 @@
                         addr_dict[key] = data[key]["address"];
                     }
                 });
-                
+
             }
 		}
 
@@ -59,8 +59,7 @@
 	Enter a string.
 	<!--<input type="text" name="userInput" value="">
 	<input type="button" name="submit" value="Click" onClick="processForm(this.form)">-->
-	<input id="professor" value="" onchange="getString(this.value);"
-onkeyup="this.onchange();" onpaste="this.onchange();" oninput="this.onchange();"/>
+	<input id="professor" value="" onchange="getString(this.value);" onpaste="this.onchange();" oninput="this.onchange();"/>
 
     <!-- Testing Javascript requests
       -- <input type="button" name="submit" value="Request" onClick="printResponse()">
