--- a/templates/main.html
+++ b/templates/main.html
@@ -2,14 +2,71 @@
 <html>
 <head>
 	<title>Javascript AJAX Requests</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <style type="text/css">
+      html { height: 100%;
+	  background: url(http://bloximages.newyork1.vip.townnews.com/timesdispatch.com/content/tncms/assets/v3/editorial/7/30/7309fb3c-4b0e-53f3-89c9-63eb31d76268/50f87a4e1c6e5.image.jpg) no-repeat center center fixed;
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
+	  }
+      body { height: 100%; margin: 0; padding: 0; }
+	  div#container {height: 100%; text-align: center; float:top;}
+	  div#title{ font-size:25px;}
+	  input#professor { height:50px; width: 55%; font-size:25px; border:2px solid; border-radius:5px; }
+      div#map-canvas { height: 65%; width: 50%; border:2px solid; border-radius:25px; margin-left:25%; margin-top:50px;}
+
+    </style>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKQHcshXFHbzDF1MDXA3DAgUM9SWCulRA&sensor=true">
+    </script>
 	<script language="JavaScript">
 
 
+        /** maps code **/
+      var map;
+      var markers = [];
+
+      function initialize() {
+        var mapOptions = {
+          center: new google.maps.LatLng(38.033499, -78.508964),
+          zoom: 16
+        };
+        map = new google.maps.Map(document.getElementById("map-canvas"),
+            mapOptions);
+
+		//var marker = new google.maps.Marker({
+		//	position: new google.maps.LatLng(38.031628, -78.510946),
+		//	title:"Hello World!"
+		//});
+		//marker.setMap(map);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+
+      function setMarker(lat, lng, name) {
+          var marker = new google.maps.Marker({
+			position: new google.maps.LatLng(lat, lng),
+			title: name,
+			map: map
+		  });
+          markers.push(marker);
+      }
+      function deleteMarkers() {
+        for (var i = 0; i < markers.length; i++) {
+            markers[i].setMap(null);
+        }
+        markers = [];
+      }
+
+
+
+        /** user input **/
         var prof; //stores the user's search term
         var json; //stores the json data from user's request
-        var addr_dict = new Object(); //stores mapping of professor-->address
-        var coord_dict = new Object(); //stores mapping of professor-->{x: lat, y: lon}
+        var addr_dict; //stores mapping of professor-->address
+        var coord_dict; //stores mapping of professor-->{x: lat, y: lon}
 
         var lookUpTable = {
            "Rice Hall": [38.031604, -78.510867],
@@ -36,6 +93,7 @@
            "Garrett Hall": [38.034111, -78.505452],
            "Old Cabell Hall": [38.032761, -78.504904],
            "New Cabell Hall": [38.032541, -78.505019],
+           "Cabell Hall": [38.032541, -78.505019],
            "Nau Hall": [38.031734, -78.505048],
            "Gibson Hall": [38.031322, -78.505102],
            "Rouss and Robertson Hall": [38.032792, -78.503691],
@@ -69,7 +127,10 @@
         //tracks textbox usage, called every time text box changes
         //fills up professor-->address dictionary (addr_dict)
 		function getString(str) {
+            deleteMarkers();
             prof = str; //for global storage of the user's input
+            addr_dict = new Object();
+            coord_dict = new Object();
             if(prof.length >= 5) {
                 $.getJSON("http://localhost:8000/search/?term=" + prof, function(data) {
                     //console.log(data); // use data as a generic object
@@ -78,7 +139,39 @@
                         console.log(data[key]["address"]);
                         addr_dict[key] = data[key]["address"];
                     }
-                    for (var prof in addr_dict) {
+
+                    mapCoordinates();
+                    drawMarkers();
+
+                    //Check if coord_dict is populated correctly
+                    /*for (var profs in coord_dict) {
+                        console.log(profs + " -> " + coord_dict[profs]);
+                    }*/
+
+                });
+            }
+		}
+
+        //draw professor markers on the map
+        function drawMarkers() {
+            for(var prof in coord_dict) {
+
+                var lat = coord_dict[prof][0];
+                var lon = coord_dict[prof][1];
+                //console.log(coord_dict[prof][0] + " " + coord_dict[prof][1]);
+
+                setMarker(lat, lon, prof);
+
+            }
+
+
+        }
+
+
+
+        function mapCoordinates() {
+
+            for (var prof in addr_dict) {
                         var address = addr_dict[prof];
                         var altAddr = address || "No location";
                         for(var building in lookUpTable){
@@ -88,37 +181,27 @@
                             }
                         }
                     }
-                    //Check if coord_dict is populated correctly
-                    for (var profs in coord_dict) {
-                        console.log(profs + " -> " + coord_dict[profs]);
-                    }
-                });
-            }
-		}
 
-
-        //json --> dictionary
-        /*$.getJSON("http://localhost:8000/search/?term=ishan", function(data) {
-            console.log(data); // use data as a generic object
-            console.log(data["Ishan C. Williams"]["address"]);
-            for(var key in data) {
-
-                console.log(key); //grab all of the names
-                console.log(data[key]["address"]);
-                dict[key] = data[key]["address"];
-            }
-        });*/
+        }
 
 	</script>
 </head>
 <body>
-	Enter a string.
-	<!--<input type="text" name="userInput" value="">
-	<input type="button" name="submit" value="Click" onClick="processForm(this.form)">-->
-	<input id="professor" value="" onchange="getString(this.value);" onpaste="this.onchange();" oninput="this.onchange();"/>
-    <!-- Testing Javascript requests
-      -- <input type="button" name="submit" value="Request" onClick="printResponse()">
-      -->
+	<div id="container"/>
+		<div id="title">
+			<h1>University of Virginia Faculty Search</h1>
+		</div>
+		<form method="search">
+			<div id="textfield">
+				<input id="professor" value="" onchange="getString(this.value);"
+			        onpaste="this.onchange();" oninput="this.onchange();" placeholder="Search for a professor by last name, first name, or computing ID">
+			</div>
+		</form>
+
+		<div id="map-canvas"/>
+
+	</div>
+
 
 </body>
 </html>
