--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
       html { height: 100%;
-	  background: url(http://bloximages.newyork1.vip.townnews.com/timesdispatch.com/content/tncms/assets/v3/editorial/7/30/7309fb3c-4b0e-53f3-89c9-63eb31d76268/50f87a4e1c6e5.image.jpg);
-	  
+	  background: url(http://upload.wikimedia.org/wikipedia/commons/a/ae/University_of_Virginia_Rotunda_2006.jpg) no-repeat center center fixed;
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
 	  }
       body { height: 100%; margin: 0; padding: 0; }
 	  div#container {height: 100%; text-align: center; float:top;}
