--- a/templates/main.html
+++ b/templates/main.html
@@ -13,10 +13,10 @@
 	  }
       body { height: 100%; margin: 0; padding: 0; }
 	  div#container {height: 100%; text-align: center; float:top;}
-	  div#title{ font-size:25px; color: white; text-shadow: -1px -1px 0px black, 1px -1px 0px black, -1px 1px 0px black, 1px 1px 0px black;}
-	  input#professor { height:50px; width: 55%; font-size:25px; border:2px solid; border-radius:5px; }
+	  div#title{ font-family: "Impact"; font-size:35px; color: white; text-shadow: -1px -1px 0px black, 1px -1px 0px black, -1px 1px 0px black, 1px 1px 0px black;}
+	  input#professor { font-family: "Trebuchet MS" sans-serif; height:50px; width: 55%; font-size:25px; border:2px solid; border-radius:5px; text-align: center; }
       div#map-canvas { height: 65%; width: 50%; border:2px solid; border-radius:25px; margin-left:25%; margin-top:50px;}
-      div#prof-list { font-family: "Helvetica"; font-size: 25px; margin-top: 30px; background: moccasin; border: 1px; border-radius: 10px;}
+      div#prof-list { font-family: "Trebuchet MS"; font-size: 25px; margin-top: 30px; background: moccasin; border: 1px; border-radius: 10px;}
 
     </style>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -29,7 +29,6 @@
         /** maps code **/
       var map;
       var markers = [];
-      //var highlighted = "/highlighted_marker.png";
 
       function initialize() {
         var mapOptions = {
@@ -39,11 +38,6 @@
         map = new google.maps.Map(document.getElementById("map-canvas"),
             mapOptions);
 
-		//var marker = new google.maps.Marker({
-		//	position: new google.maps.LatLng(38.031628, -78.510946),
-		//	title:"Hello World!"
-		//});
-		//marker.setMap(map);
       }
       google.maps.event.addDomListener(window, 'load', initialize);
 
@@ -137,7 +131,6 @@
             coord_dict = new Object();
             if(prof.length >= 5) {
                 $.getJSON("http://localhost:8000/search/?term=" + prof, function(data) {
-                    //console.log(data); // use data as a generic object
                     for(var key in data) {
                         console.log(key); //grab all of the names
                         console.log(data[key]["address"]);
@@ -146,11 +139,6 @@
 
                     mapCoordinates();
                     drawMarkers();
-
-                    //Check if coord_dict is populated correctly
-                    /*for (var profs in coord_dict) {
-                        console.log(profs + " -> " + coord_dict[profs]);
-                    }*/
 
                 });
             }
@@ -162,11 +150,9 @@
 
                 var lat = coord_dict[prof][0];
                 var lon = coord_dict[prof][1];
-                //console.log(coord_dict[prof][0] + " " + coord_dict[prof][1]);
 
                 setMarker(lat, lon, prof);
                 var highlightTitle = prof;
-                //alert(highlightTitle);
                 if(document.getElementById("prof-list").innerHTML.indexOf(prof) == -1)
                     document.getElementById("prof-list").innerHTML += "<div id=" +'"'+ prof +'"'+ " onmouseover='highlightMarker(id)' onmouseout='highlightMarker(null)'>" +
                             prof + "; " + addr_dict[prof] +
